[gd_scene load_steps=6 format=2]

[ext_resource path="res://characters/player/PlayerCharacter.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/player/Player.gd" type="Script" id=2]
[ext_resource path="res://characters/player/AmmoStorage.gd" type="Script" id=3]
[ext_resource path="res://characters/player/AmmoDisplay.gd" type="Script" id=4]
[ext_resource path="res://sprites/concus.png" type="Texture" id=5]

[node name="Player" type="Node2D"]
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.8, 0.8 )

[node name="TargetPosCircle1" type="Sprite" parent="."]
texture = ExtResource( 5 )
vframes = 2
hframes = 3
frame = 5

[node name="TargetPosCircle2" type="Sprite" parent="."]
texture = ExtResource( 5 )
vframes = 2
hframes = 3
frame = 5

[node name="PlayerCharacter" parent="." instance=ExtResource( 1 )]
position = Vector2( -123, 0 )

[node name="LaserSight" parent="PlayerCharacter/Graphics/Legs" index="2"]
dotted = false
laser_color = Color( 0, 1, 0.0156863, 0.572549 )

[node name="Label" parent="PlayerCharacter/Graphics/Legs/LaserSight" index="0"]
text = "L"

[node name="PlayerCharacter2" parent="." instance=ExtResource( 1 )]
position = Vector2( 139.262, 0 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayerUI" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 50.3499
margin_right = 20.0
margin_bottom = 90.3499
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1" type="Control" parent="CanvasLayer/PlayerUI"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Player2" type="Control" parent="CanvasLayer/PlayerUI"]
margin_right = 40.0
margin_bottom = 40.0

[node name="AmmoDisplay" type="Label" parent="CanvasLayer/PlayerUI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -58.0
margin_top = -81.2902
margin_right = 58.0
margin_bottom = -16.2902
text = "Ammo
Machine Gun: 100
SG
RL"
align = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmmoStorage" type="Node" parent="."]
script = ExtResource( 3 )
[connection signal="ammo_updated" from="AmmoStorage" to="CanvasLayer/PlayerUI/AmmoDisplay" method="update_ammo"]

[editable path="PlayerCharacter"]
